# python_call_cuda_via_pybind11

./: CMakeLists.txt  README.md  test_add.py
src/: add.cu  add.cuh  main.cpp
